# macro-placement-challenge-2026

./: README.md
flow/scripts/: ADVANCED_MACRO_PLACEMENT_ALGORITHM.md  MACRO_PLACEMENT_README.md  TAHPP_DECISION_GUIDE.md  TAHPP_IMPLEMENTATION_GUIDE.md  TAHPP_README.md  macro_place.tcl  macro_place_util.tcl  variables.yaml
tools/OpenROAD/src/mpl/: CMakeLists.txt
tools/OpenROAD/src/mpl/include/mpl/: rtl_mp.h
tools/OpenROAD/src/mpl/src/: mpl.i  mpl.tcl  rtl_mp.cpp  rtl_mp_hybrid.cpp
tools/OpenROAD/src/mpl/src/mpl/: mpl.i  mpl.tcl
tools/OpenROAD/src/mpl/src/tahpp/: gpu_batch_eval.cpp  gpu_batch_eval.h  placement_solution.cpp  placement_solution.h  tahpp_optimizer.cpp  tahpp_optimizer.h  timing_criticality.cpp  timing_criticality.h
